# Logs-Composition

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: Logger.h  Logs_Composition.h
src/: CMakeLists.txt  Logger.cpp  Logs_Composition.cpp
